<resources>
    <string name="app_name">RecyclerViewAnimations</string>

    <string name="travelino_item_price_suffix">/day</string>

    <string name="notify_demo_label">Notify demo</string>
    <string name="notify_demo_insert_item_label">Notify insert demo</string>
    <string name="notify_demo_move_item_label">Notify move demo</string>
    <string name="notify_demo_remove_item_range_label">Notify remove item range demo</string>
    <string name="notify_demo_change_item_label">Notify change item demo</string>
    <string name="notify_demo_change_item_with_payload_label">Notify change item with payload demo</string>
    <string name="diff_util_demo_label">DiffUtil demo</string>
</resources>
