<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/insertItemDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/notify_demo_insert_item_label" />

    <TextView
        android:id="@+id/moveItemDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/notify_demo_move_item_label" />

    <TextView
        android:id="@+id/removeItemRangeDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/notify_demo_remove_item_range_label" />

    <TextView
        android:id="@+id/changeItemDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/notify_demo_change_item_label" />

    <TextView
        android:id="@+id/changeItemWithPayloadDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/notify_demo_change_item_with_payload_label" />

    <TextView
        android:id="@+id/diffUtilDemoButton"
        style="@style/MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/diff_util_demo_label" />

</LinearLayout>
